# yogo

./: Cargo.toml  listing.html  magnets.json
resource/: links.txt  output.html  style.css  template.html  test-input.csv
src/: args.rs  context.rs  history.rs  magnet.rs  main.rs  wait.rs
