[package]
name = "yogo"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.15", features = ["derive"] }
directories = "4.0.1"
hashbrown = { version = "0.12.3", features = ["serde"] }
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
scraper = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
unicase = "2.6.0"
